DeltaFile: Merge protocol stack content, metadata, and deletedMetadataKeys into actions